# lmu-ep-client

./: .gitattributes  .gitignore  .gitmodules  =7.0  AGENTS.md  CLAUDE.md  README.md  index.html  lmu-ep-client.spec  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/skills/release/: SKILL.md
docs/superpowers/plans/: 2026-04-02-stint-logger.md  2026-05-25-gui-launcher.md
docs/superpowers/specs/: 2026-04-02-stint-logger-design.md  2026-05-24-gui-launcher-design.md
metadata/: 1.root.json  snapshot.json  targets.json  timestamp.json
packaging/: publish_release.py  repo_init.py  repo_settings.py
src/lmu_ep_client/: __main__.py  api_client.py  cli.py  detector.py  gui.py  interactive.py  logging_setup.py  models.py  poller.py  registration_display.py  resources.py  session_context.py  splash.py  stdio_setup.py  tracking_outbox.py  tracking_publisher.py  updater.py  writer.py
tests/: conftest.py  test_api_client.py  test_cli.py  test_detector.py  test_gui.py  test_interactive.py  test_logging_setup.py  test_models.py  test_packaging.py  test_poller.py  test_registration_display.py  test_resources.py  test_session_context.py  test_splash.py  test_stdio_setup.py  test_tracking_outbox.py  test_tracking_publisher.py  test_updater.py  test_writer.py
