[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lmu-ep-client"
version = "0.1.0"
description = "LMU Endurance Protocol Client — stint activity logger"
requires-python = ">=3.10"
dependencies = [
    "pyLMUSharedMemory",
]

[project.scripts]
lmu-ep-client = "lmu_ep_client.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
