[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lmu-ep-client"
dynamic = ["version"]
description = "LMU Endurance Protocol Client — stint activity logger"
requires-python = ">=3.10"
dependencies = [
    "questionary>=2.0",
    "PySide6>=6.7",
    "tufup>=0.10",
]

[tool.setuptools.dynamic]
version = {attr = "lmu_ep_client.__version__"}

[project.scripts]
lmu-ep-client = "lmu_ep_client.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
where = ["src", "vendor"]
include = ["lmu_ep_client*", "pyLMUSharedMemory*"]
exclude = ["pyLMUSharedMemory.tests*"]

[tool.pytest.ini_options]
pythonpath = ["src", "vendor"]
